--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -221,7 +221,7 @@ body{
 }
 
 #header-container{
-	background-color:#f16529;
+	background-color:#2965f1;
 	height:130px;
 	border-bottom:20px solid #e44d26;
 	margin-bottom:50px;
