--- a/public_html/css/less.css
+++ b/public_html/css/less.css
@@ -86,7 +86,6 @@ cols    1     2      3      4      5      6      7      8      9      10
 px      68    160    252    344    436    528    620    712    804    896    */
 
 body {
-	width: 896px;
 	padding: 72px 48px 84px;
 	background: rgb(232,232,232);
 	color: rgb(60,60,60);
@@ -94,7 +93,9 @@ body {
 }
 
 .wrapper {
+	width: 896px;
 	margin:0 auto;
+	position:relative;
 }
 
 
@@ -109,9 +110,13 @@ px      68    160    252    344    436    528    620    712    */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	
 	body {
-		width: 712px;
 		padding: 48px 28px 60px;
 	}
+
+	.wrapper {
+		width: 712px;
+	}
+	
 }
 
 
@@ -127,9 +132,13 @@ px      68    160    252    */
 @media only screen and (max-width: 767px) {
 	
 	body {
-		width: 252px;
 		padding: 48px 34px 60px;
 	}
+
+	.wrapper {
+		width: 252px;
+	}
+	
 	
 }
 
@@ -146,8 +155,11 @@ px      68    160    252    344    436    */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 	
 	body {
-		width: 436px;
 		padding: 36px 22px 48px;
+	}
+
+	.wrapper {
+		width: 436px;
 	}
 	
 }
