--- a/public_html/css/less.css
+++ b/public_html/css/less.css
@@ -106,6 +106,7 @@ article {
 }
 article .maps {
 	width:100%;
+	height:500px;
 }
 
 /*		Tablet Layout: 768px.
@@ -161,6 +162,9 @@ px      68    160    252    */
 	article {
 		width:100%;
 	}
+	article .maps {
+		height:300px;
+	}
 	
 	
 }
@@ -190,6 +194,9 @@ px      68    160    252    344    436    */
 	}
 	article {
 		width:100%;
+	}
+	article .maps {
+		height:400px;
 	}
 	
 }
